# matobev-apps

./: .gitignore  DEPLOYMENT_GUIDE.md  QUICK_DEPLOY.md  README.md  deploy.bat  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
admin-app/: .env.example  package-lock.json  package.json
admin-app/src/: App.tsx  main.tsx
admin-app/src/components/layout/: Sidebar.tsx  TopNav.tsx
admin-app/src/components/ui/: DashCard.tsx
admin-app/src/lib/: supabaseClient.ts
admin-app/src/lib/api/: useNews.ts  useTrials.ts  useUsers.ts  useVideos.ts
admin-app/src/pages/: Approve.tsx  Dashboard.tsx  Login.tsx
ml-service/: pyproject.toml
ml-service/app/: main.py
shared/: package.json  tsconfig.json
shared/src/: countries.ts  supabaseClient.ts  types.ts
shared/src/ui/: logo.tsx
supabase/: schema.sql
users-app/: .env.example  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
users-app/src/: App.tsx  index.css  routes.tsx
users-app/src/components/: Logo.tsx
users-app/src/components/layout/: Sidebar.tsx  TopNav.tsx
users-app/src/components/status/: StatusUpload.tsx  StatusViewer.tsx
users-app/src/components/ui/: Alert.tsx  Button.tsx  CountryFlag.tsx  DashCard.tsx  Input.tsx  (+7 more)
users-app/src/lib/: countries.ts  playerCardEvents.ts  storage.ts  types.ts  useProfile.ts
users-app/src/pages/: Analytics.tsx  Auth.tsx  Dashboard.tsx  Feed.tsx  Landing.tsx  Login.tsx  MessageThread.tsx  Messages.tsx  News.tsx  Players.tsx  PostTrial.tsx  Profile.tsx  Signup.tsx  Trials.tsx  Upload.tsx  VideoAnalysis.tsx
users-app/src/types/: react.d.ts
(+4 files in other folders)
